--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -163,7 +163,7 @@ knitr::include_graphics(
 )
 ```
 
-```{r unemployment-cases, fig.cap = "\\textit{fDaily growth rate of unemployment claims and confirmed cases versus confirmed cases per capita for the state of Wisconsin.}", out.width = "90%"}
+```{r unemployment-cases, fig.cap = "\\textit{Daily growth rate of unemployment claims and confirmed cases versus confirmed cases per capita for the state of Wisconsin.}", out.width = "90%"}
 knitr::include_graphics(
   here("report/figures/unemployment-cases.png")
 )
@@ -203,6 +203,8 @@ Cohn, Nate, Josh Katz, Margot Sanger-Katz, and Kevin Quealy. “Four Ways to Mea
 
 Corona Data Scraper. Timeseries. 2020. Retrieved from https://coronadatascraper.com/#home.
 
+Department of Workforce Development. “Unemployment Week 11 - 2019/2020 Counts.” Wisconsin.gov. Accessed May 5, 2020. https://dwd.wisconsin.gov/covid19/public/stats/week-11.htm.
+
 Katz, Josh, Kevin Quealy, and Margot Sanger-Katz. “How Severe Are Coronavirus Outbreaks Across the U.S.? Look Up Any Metro Area.” The New York Times, sec. The Upshot. Accessed May 5, 2020. https://www.nytimes.com/interactive/2020/04/03/upshot/coronavirus-metro-area-tracker.html.
 
 New York Times. New York Times database of U.S. coronavirus cases. 2020. Retrieved from https://github.com/nytimes/covid-19-data.
@@ -212,7 +214,6 @@ United States Census Bureau. County Population Totals: 2010-2019. 2019. Retrieve
 United States Census Bureau. Delineation Files. 2018. Retrieved from https://www.census.gov/geographies/reference-files/time-series/demo/metro-micro/delineation-files.html.
 
 United States Census Bureau. Cartographic Boundary Files. 2010. Retrieved from https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html.
-
 
 
 
