--- a/nyt-article-recreation-gundersen.Rmd
+++ b/nyt-article-recreation-gundersen.Rmd
@@ -136,7 +136,7 @@ fig1 <- plot_ly(data = plot_data,
   layout(title = "") %>% 
   layout(xaxis = list(title = "Date"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
-                      range = c(0, 1),
+                      # range = c(0, 1),
                       tickformat = "%")) %>% 
   config(doubleClickDelay = 500)
 
@@ -195,7 +195,7 @@ fig2 <- plot_ly(data = plot_data,
   layout(title = "") %>% 
   layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
-                      range = c(0, 1),
+                      # range = c(0, 1),
                       tickformat = "%")) %>% 
   config(doubleClickDelay = 500)
 
