--- a/index.Rmd
+++ b/index.Rmd
@@ -261,7 +261,7 @@ fig1 <- plot_ly(data = plot_data,
                hoverinfo = "text") %>% 
   layout(title = "") %>% 
   layout(yaxis = list(title = "Average Daily Change (Last 7 Days)",
-                      range = c(0, 1),
+                      # range = c(0, 1),
                       tickformat = "%")) %>% 
   config(doubleClickDelay = 500)
 
@@ -329,7 +329,7 @@ fig2 <- plot_ly(data = plot_data,
   layout(title = "") %>% 
   layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
-                      range = c(0, 1),
+                      # range = c(0, 1),
                       tickformat = "%")) %>% 
   config(doubleClickDelay = 500)
 
