--- a/nyt-article-recreation-marshfield.Rmd
+++ b/nyt-article-recreation-marshfield.Rmd
@@ -208,6 +208,7 @@ plot_data <-
   arrange(date) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
+         new.cases = ifelse(new.cases < 0, 0, new.cases),
          roll.cases = rollapply(new.cases, 
                                 list(-(0:6)), 
                                 sum, 
@@ -260,6 +261,7 @@ plot_data <-
   arrange(date) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
+         new.cases = ifelse(new.cases < 0, 0, new.cases),
          roll.cases = rollapply(new.cases, 
                                 list(-(0:6)), 
                                 sum, 
